fixing read more buttons overlap on mobile

--- a/assets/less/cold-omaha.less
+++ b/assets/less/cold-omaha.less
@@ -1225,10 +1225,10 @@ line-height: 40px;
 	float: right;
 }
 #ccr-blog .blog-text .meta-data {
-	position: absolute;
-	bottom: 0;
+  position: relative;
+  clear: both;
 	width: 100%;
-	display: inline-block;
+	display: block;
 	line-height: 40px;
 }
 #ccr-blog article h1{
@@ -1244,7 +1244,7 @@ line-height: 40px;
 	margin-right:3px;
 }
 #ccr-blog .read-more{
-	float:right;
+  text-align: right;
 }
 
 /* 8.0 - Blog Page End 
